# soliloquy

./: .gitignore  Cargo.toml  LICENSE  README.md  README.org
doc/: CPU.org~  CPU_TODO.org  NES_TODO.org  References.json
rs-nes/: Cargo.toml
src/: lib.rs  main.rs
src/core/: #cpu.rs#  .#cpu.rs  .cpu.rs.swp  2  \  apu.rs  cartridge.rs  cpu.rs  cpu_test.rs  cpu_test.rs~  mapper.rs  memory.rs  mod.rs  nes.rs
src/doc/: CPU_TODO.org  References.json
src/hardware/: cpu.rs
src/test/: ttd_cpu.rs
test/: ttd_cpu.rs
